2006-05-27  Brian Warner  <warner@lothar.com>

	* buildbot/__init__.py: bump to 0.7.3+ while between releases
	* docs/buildbot.texinfo: same

2006-05-23  Brian Warner  <warner@lothar.com>

	* buildbot/__init__.py (version): Releasing buildbot-0.7.3
	* docs/buildbot.texinfo: set version to match
	* NEWS: update for 0.7.3

	* docs/buildbot.texinfo (Change Sources): mention hg_buildbot.py,
	give a quick mapping from VC system to possible ChangeSources
	(Build Properties): add 'buildername'

	* buildbot/process/base.py (Build.setupStatus): oops, set
	'buildername' and 'buildnumber' properties
	* buildbot/test/test_properties.py (Interpolate.testBuildNumber):
	test them

2006-05-22  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo (Build Properties): explain the syntax of
	property interpolation better

	* README (INSTALLATION): remove old '-v' argument from recommended
	trial command line

	* docs/buildbot.texinfo (ShellCommand): add docs for description=
	and descriptionDone= arguments. Thanks to Niklaus Giger for the
	patch. SF#1475494.

	* buildbot/slave/commands.py (SVN.parseGotRevision._parse): use
	'svnversion' instead of grepping the output of 'svn info', much
	simpler and avoids CR/LF problems on windows. Thanks to Olivier
	Bonnet for the suggestion.
	(SVN.parseGotRevision): oops, older verisons of 'svnversion'
	require the WC_PATH argument, so run 'svnversion .' instead.

	* buildbot/interfaces.py (IChangeSource): methods in Interfaces
	aren't supposed to have 'self' in their argument list

2006-05-21  Brian Warner  <warner@lothar.com>

	* buildbot/process/step.py (ShellCommand.start): make
	testInterpolate pass. I was passing the uninterpolated command to
	the RemoteShellCommand constructor
	(ShellCommand._interpolateProperties): oops, handle non-list
	commands (i.e. strings with multiple words separated by spaces in
	them) properly, instead of forgetting about them.

	* buildbot/test/test_properties.py (Run.testInterpolate): new test